--- a/state/templates/state/gov/bills/purchase_auction.html
+++ b/state/templates/state/gov/bills/purchase_auction.html
@@ -49,10 +49,10 @@
             {% with player=data|dict_key:'player' %}
                 {% if player not in bill.votes_pro.all and player not in bill.votes_con.all %}
                 <div class="row">
-                    <a class="btn btn-success" onclick="vote_bill('ExploreResources',{{ bill.pk }},'pro')">Проголосовать</a>
+                    <a class="btn btn-success" onclick="vote_bill('PurchaseAuction',{{ bill.pk }},'pro')">Проголосовать</a>
                 </div>
                 <div class="row">
-                    <a class="btn btn-danger" onclick="vote_bill('ExploreResources',{{ bill.pk }},'con')">Проголосовать</a>
+                    <a class="btn btn-danger" onclick="vote_bill('PurchaseAuction',{{ bill.pk }},'con')">Проголосовать</a>
                 </div>
                 {% else %}
                 <font size="5">
