--- a/state/templates/state/gov/treasury.html
+++ b/state/templates/state/gov/treasury.html
@@ -3,16 +3,28 @@
 {% load get_sum %}
 {% load get_mod %}
 {% load dict_key %}
+{% load has_key %}
 {% load l10n %}{% load i18n %}
 
 {% if treasury %}
-<div id="treasury" class="tab-pane fade">
+<div id="treasury" class="tab-pane fade" style="height: 700px; overflow-x: hidden; overflow-y: auto;">
     <div class="row" style="background: #F1F3F4; margin-top: 20px">
         <div class="col-xs-2 col-sm-2 col-md-2">
             {{ storage_cl|get_attr:'valut'|dict_key:'cash' }}:
         </div>
-        <div class="col-xs-10 col-sm-10 col-md-10">
-            {% localize off %}{{ treasury|get_attr:'cash' }}{% endlocalize %}
+        <div class="col-xs-5 col-sm-5 col-md-5">
+            <p style="color: #85bb65">
+            {{ treasury|get_attr:'cash' }}
+            </p>
+        </div>
+        <div class="col-xs-5 col-sm-5 col-md-5">
+            <p style="color: #FF0000">
+                {% if locks|has_key:'cash' %}
+                    {{ locks|dict_key:'cash' }}
+                {% else %}
+                0
+                {% endif %}
+            </p>
         </div>
     </div>
     {% for group in storage_cl|get_attr:'types' %}
@@ -24,8 +36,17 @@
         <div class="col-xs-2 col-sm-2 col-md-2">
             {{ storage_cl|get_attr:group|dict_key:good }}:
         </div>
-        <div class="col-xs-10 col-sm-10 col-md-10">
-            {% localize off %}{{ treasury|get_attr:good }}{% endlocalize %}
+        <div class="col-xs-5 col-sm-5 col-md-5">
+            {{ treasury|get_attr:good }}
+        </div>
+        <div class="col-xs-5 col-sm-5 col-md-5">
+            <p style="color: #FF0000">
+                {% if locks|has_key:good %}
+                    {{ locks|dict_key:good }}
+                {% else %}
+                0
+                {% endif %}
+            </p>
         </div>
     </div>
         {% endfor %}
