--- a/storage/templates/storage/storage_blocks/has_storage.html
+++ b/storage/templates/storage/storage_blocks/has_storage.html
@@ -47,7 +47,7 @@
                     {% with lock_val=locks|dict_key:good %}
                 <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: {{ cap_val|get_proc:lock_val }}%; background-color: #DC3545"
                                       data-toggle="tooltip" data-placement="top" title="{% localize off %}{{ locks|dict_key:good }}{% endlocalize %}">
-                    {% localize off %}{{ locks|dict_key:good }}{% endlocalize %}
+                    {% localize off %}c{% endlocalize %}
                 </div>
                     {% endwith %}
                 {% endif %}
