--- a/player/templates/player/player_status.html
+++ b/player/templates/player/player_status.html
@@ -8,7 +8,7 @@
         </a>
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
-        <div class="row">{{ player.nickname }}</div>
+        <div class="row" id="nickname">{{ player.nickname }}</div>
         <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                 <script>
