--- a/player/templates/player/profile.html
+++ b/player/templates/player/profile.html
@@ -126,7 +126,19 @@
             </div>
             <!--колонка характеристик персонажа-->
             <div class="col-xs-6 col-sm-6 col-md-6">
-                <div align="center" id="player_nickname" style="cursor: pointer; font-size: 20pt; font-weight: bold;">{{ player.nickname }}</div>
+                <div class="nickname_block" align="center">
+                    <input id="player_nickname" value="{{ player.nickname }}" disabled maxlength="30" style="width: 40%; text-align: center">
+                    <button id="nickname_edit" type="button" class="btn btn-warning" onclick="open_nickname()">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </button>
+                    <button id="nickname_cancel" type="button" class="btn btn-danger" style="display:none" onclick="close_nickname()">
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                    </button>
+                    <button id="nickname_send" type="button" class="btn btn-success" style="display:none" onclick="send_nickname()">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>, -50 G
+                    </button>
+                </div>
+
                 <ul class="nav nav-tabs">
 <!--                    <li class="active"><a data-toggle="tab" href="#info">{% trans 'player_info' %}</a></li>-->
                     <li class="active"><a data-toggle="tab" href="#info">Информация</a></li>
