--- a/player/templates/player/profile.html
+++ b/player/templates/player/profile.html
@@ -118,7 +118,7 @@
                           </button>
                         </div>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
-                        <button type="button" class="btn btn-primary js-crop-and-upload">Загрузить</button>
+                        <button type="button" class="btn btn-primary js-crop-and-upload">Загрузить, -100 G</button>
                       </div>
                     </div>
                     </div>
