цена товара в сырье, в производстве

--- a/storage/templates/storage/factory/factory.html
+++ b/storage/templates/storage/factory/factory.html
@@ -139,7 +139,10 @@
         <div class="row" id="crude_line" style="margin-top: 1%; display: none">
             <div class="col-xs-2 col-sm-2 col-md-2 crude_name" align="left">
             </div>
-            <div class="col-xs-2 col-sm-2 col-md-2" align="left">
+            <div class="col-xs-1 col-sm-1 col-md-1" align="right">
+                <div class="crude_price"></div>
+            </div>
+            <div class="col-xs-1 col-sm-1 col-md-1" align="left">
                 <input type="number" class="crude_count" min="0" style="width: 100%;">
             </div>
             <div class="col-xs-1 col-sm-1 col-md-1" align="left">
