--- a/party/templates/party/party_view.html
+++ b/party/templates/party/party_view.html
@@ -56,7 +56,7 @@
                                     <b><font size="4">{{ players_count }}</font></b>
                                 </div>
                             </div>
-                            <div class="row flex" >
+                            <div class="row flex" style="margin-top: 15px">
                                 <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                     <b><font size="4">Тип:</font></b>
                                 </div>
@@ -64,7 +64,7 @@
                                     <b><font size="4">{{ party.get_type_display }}</font></b>
                                 </div>
                             </div>
-                            <div class="row flex" >
+                            <div class="row flex" style="margin-top: 15px">
                                 <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                     <b><font size="4">{% trans 'Регион' %}:</font></b>
                                 </div>
@@ -75,7 +75,7 @@
                                     </b>
                                 </div>
                             </div>
-                            <div class="row flex">
+                            <div class="row flex" style="margin-top: 15px">
                                 <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                     <b><font size="4">Дата основания:</font></b>
                                 </div>
